<resources>
    <string name="app_name">KeskonMange</string>
    <string name="tab_text_1">A l\'extérieur</string>
    <string name="tab_text_2">A la maison</string>

    <string name="votemoins">Vote Moins</string>
    <string name="voteplus">Vote Plus</string>
    <string name="supprresto">Suppression du Resto</string>
    <string name="sort_asc">Par ordre alphabétique</string>
    <string name="sort_desc">Par ordre inverse</string>
    <string name="sort_type">Par type</string>
    <string name="sort">Trier</string>
    <string name="reset">Réinitialiser</string>
    <string name="a_emporter">A emporter</string>
    <string name="livraison">Livraison</string>
    <string name="resto">Resto</string>
    <string name="plat">Plat</string>
    <string name="sort_votes">Par votes</string>
    <string name="addResto">Ajouter un resto</string>
    <string name="getResult">Obtenir le résultat</string>
    <string name="rescale">Format</string>
    <string name="scale_comfort">Confortable</string>
    <string name="scale_compact">Compact</string>
    <string name="dsl">Désolé</string>
    <string name="pasDispo">Pas de choix disponible</string>
    <string name="onMange">On mange</string>
    <string name="ok">OK</string>
    <string name="encore">Encore</string>
    <string name="newChoice">Entrer le nouveau choix</string>
    <string name="add">Ajouter</string>
</resources>
