<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="bar_resto_list">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            app:chipSpacing="6dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipResto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/resto" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLivraison"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/livraison" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEmporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/a_emporter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPlat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/plat"
                android:visibility="gone" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_resto"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_below="@+id/cg_type"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimaryDark"
            app:srcCompat="@android:drawable/ic_input_add"
            android:tint="@android:color/white" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_resto_choix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_restaurant_white_24dp" />
    </RelativeLayout>