<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/bottom_line"
    android:orientation="horizontal"
    android:padding="0dp">

    <TextView
        android:id="@+id/resto_name"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:text="nom"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resto_type"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="type"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resto_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/np_moins"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/votemoins"
        android:src="@drawable/ic_remove_black_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resto_type"
        app:layout_constraintEnd_toStartOf="@id/np_nb"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/np_nb"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:focusable="false"
        android:importantForAutofill="no"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/np_moins"
        app:layout_constraintEnd_toStartOf="@id/np_plus"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        android:layout_margin="0dp"/>

    <ImageButton
        android:id="@+id/np_plus"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/voteplus"
        android:src="@drawable/ic_add_black_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/np_nb"
        app:layout_constraintEnd_toStartOf="@id/resto_non"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/resto_non"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/supprresto"
        android:src="@drawable/ic_not_interested_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/np_plus"
        app:layout_constraintEnd_toStartOf="@id/resto_delete"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/resto_delete"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/supprresto"
        android:src="@drawable/ic_delete_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/resto_non"
        app:layout_constraintEnd_toStartOf="@id/resto_move"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/resto_move"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/supprresto"
        android:src="@drawable/ic_reorder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
